# ChangeLog for dev-games/libtpproto-cpp
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  18 Jan 2009; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-0.1.0.ebuild:
  Added sparc keyword

  30 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-9999.ebuild:
  Added development version from git

  27 Sep 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-0.1.0.ebuild:
  Stabilized

  30 Jun 2008; Aaron Mavrinac <mavrinac@gmail.com> libtpproto-cpp-0.1.0.ebuild:
  Added Boost dependency and gnutls USE flag

*libtpproto-cpp-0.1.0 (20 Jan 2007)

  20 Jan 2007; Jure Repinc <jlp@holodeck1.com> libtpproto-cpp-0.1.0.ebuild:
  Initial import