@@ -1,5 +1,5 @@
 DIST libtpproto-cpp-0.1.0.tar.gz 365113 RMD160 13f204b70c4a50109737dbbf85a82866597b5e25 SHA1 e574728d3135120e98bc40df685f306ce1c3f896 SHA256 60259f077773b94cd25272bcc43b909a542c5f6f3f80547a55bff11b5e07db6d
-EBUILD libtpproto-cpp-0.1.0.ebuild 926 RMD160 334220674582faf9ffae21f82c6c093309c42e53 SHA1 d06c13ce2867b5c0752b8c791c10a5907c96fef3 SHA256 3ea60333a31a12deaf109655e4192c50753278d77953c96d11818e992fc213b4
-EBUILD libtpproto-cpp-9999.ebuild 996 RMD160 0c8e7f58b778d5a2f4e85a359318221c32b59798 SHA1 d5c0b76bdb2e642cd41e31591194395d7089b08b SHA256 bcdb2a1a3e7254028726320ae48884523e4442a1b5747cde817c394db1c2bae7
-MISC ChangeLog 695 RMD160 0d04fd3ef2813538711565be76a92f4886805e2f SHA1 ee0ef55d2db9f2799980c30bc8f4635eb8b3346f SHA256 652f840fce0d81d8eb8579c63d5d48c0e3a16c396265dc4d828a5184c0efb9f1
+EBUILD libtpproto-cpp-0.1.0.ebuild 997 RMD160 920fee6df29224a5dae4c4a7c5a857384b9e08dd SHA1 6da622d3aeeda1fae9c6f7ed0cbe242e7ac45e21 SHA256 3af09cd58d540acbf574528ff8f78a93db0e56dc9adb784e502c291d7c00b193
+EBUILD libtpproto-cpp-9999.ebuild 1067 RMD160 193e7332ee5adabea507671105b7d05ef61f8e4e SHA1 1bd4096be7b8c711f1a1015c0d398e8fcc2d53e8 SHA256 4cb268ff73214a52739c714743c63f3d95f14e4bef3adf37f72733e76d4a8ce8
+MISC ChangeLog 826 RMD160 858030d931fc4e816fec26a144b915208c6d1c3c SHA1 b4bfebd53fcacf2b754bbd12ce29cad6048cee94 SHA256 9307ebd5ccf3232d9c4b995b9009b4639e9a4a6025afe6c291c58a18e29c6111
 MISC metadata.xml 375 RMD160 9a3a066e62cdbfcb7fb2f14b35a482f375e4ed33 SHA1 648c02c63f450ca1080f13c9a2caa20178a7e9d7 SHA256 7a74f92bc3e30cc68545f4b8e0bec8188a1c9d2bf580e49b9d158cd052930718
